7/7/14 reorder IntroductionView to correspond to top-to-bottom layout of nodes
7/7/14 clean up implementation of 'Tools' combo box
7/7/14 Introduction: left-align radio buttons with reactants box
7/7/14 Introduction: remove Reset All button from equation-choice control
7/7/14 rename StartGameLevelNode to LevelSelectionNode, fix constructor name
7/7/14 use named constructors for subtypes of GamePopupNode
7/7/14 simplify implementation of GamePopupNode
7/7/14 add subtle shadow to game dialog, so that it looks like a dialog and stands out from the reactants/products boxes
7/7/14 increase x-margin on game dialog
# 1.0.0-dev.5 7/7/14
7/7/14 #58 replace scoreboard 'panel' with 'bar'
# 1.0.0-dev.4 7/7/14
7/2/14 #60 align bottom of game buttons with bottom of boxes
7/2/14 #37 implemented the game reward
7/2/14 restructure GameFactory as a singleton
7/2/14 fix an assertion bug in BarChartsNode
7/2/14 #57 use inherit(Object,...) instead of prototype assignment
7/2/14 replace 'Author:' with @author annotation in JSdoc
7/2/14 fix an assertion bug in BalanceScalesNode
7/2/14 add/remove blank lines to match typical PhET formatting
7/2/14 #45 replace obtuse method of calling game initializer with a switch statement
7/2/14 #56 add a smiley face to Introduction screen that appears when equation is balanced
7/2/14 #62 relocate 'move' icon to upper-left of game dialog
6/25/14 #29 game dialogs: reduce font size, reduce vertical spacing, reduce size of X and check mark
# 1.0.0-dev.3 6/23/14
6/23/14 #27 uniformly reduce size of terms and arrow in equations
6/23/14 #29 address space problems with 'balanced / not balanced' dialog
6/23/14 change color of game buttons to 'yellow'
6/19/14 design decision: default to game timer off in all sims
6/19/14 replace Check-Mark-u2713.png and Heavy-Ballot-X-u2718.png with ShadowText
6/19/14 #41 create icon for 'Introduction' screen programmatically
6/19/14 #41 create icon for 'Game' screen programmatically